--- a/src/routes/local.css
+++ b/src/routes/local.css
@@ -1,9 +1,21 @@
 main {
-  padding: 0;
-  margin: 0;
-  margin-top: 1rem;
+  padding-top: 1rem !important;
+  position: relative;
 }
 
-.center {
-  position: relative;
+.three-col {
+  display: grid;
+  grid-template-columns: 1fr 60rem 1fr;
+}
+
+.left-col {
+  grid-column: 1 / 3;
+}
+
+.center-col {
+  grid-column: 2 / 3;
+}
+
+.right-col {
+  grid-column: 3 / 3;
 }
